# cmd/synced/docs/swagger.yaml
@@ -669,6 +669,304 @@ paths:
       summary: 下载交易
       tags:
       - tx
+  /mcontract/create:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: 合约文件
+        in: formData
+        name: file
+        type: file
+      - description: 账户名称
+        in: formData
+        name: account_name
+        required: true
+        type: string
+      - description: 合约名称
+        in: formData
+        name: name
+        required: true
+        type: string
+      - description: 合约参数
+        in: formData
+        name: args
+        type: string
+      - description: 合约版本
+        in: formData
+        name: version
+        required: true
+        type: string
+      - description: 合约描述
+        in: formData
+        name: description
+        type: string
+      - description: 生成方式：1 自定义合约上传 2 模板合约
+        in: formData
+        name: type
+        required: true
+        type: integer
+      - description: 文件名称
+        in: formData
+        name: file_name
+        type: string
+      - description: 模板ID
+        in: formData
+        name: template_id
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 创建合约
+      tags:
+      - contract
+  /mcontract/download/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 下载合约文件
+      tags:
+      - contract
+  /mcontract/get/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 合约ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 合约详情
+      tags:
+      - contract
+  /mcontract/history/list/{account}/{contractName}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 账户名
+        in: path
+        name: account
+        required: true
+        type: string
+      - description: 合约名称
+        in: path
+        name: contractName
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 合约历史列表
+      tags:
+      - contract
+  /mcontract/list/{account}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 账户名
+        in: path
+        name: account
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 合约列表
+      tags:
+      - contract
+  /mcontract/operate:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: 合约Id
+        in: formData
+        name: id
+        required: true
+        type: string
+      - description: 合约操作：undeploy删除合约 deploy部署合约 upgrade升级合约 freeze冻结合约 unfreeze解冻合约
+        in: formData
+        name: mode
+        required: true
+        type: string
+      - description: 账户密码
+        in: formData
+        name: password
+        required: true
+        type: string
+      - description: 是否提交到节点
+        in: formData
+        name: commit
+        required: true
+        type: boolean
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 升级/冻结/解冻/删除合约
+      tags:
+      - contract
+  /mcontract/template/get/{id}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 合约模板ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 合约模板详情
+      tags:
+      - contractTemplate
+  /mcontract/template/list/{account}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 账户名
+        in: path
+        name: account
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 合约模板列表
+      tags:
+      - contractTemplate
+  /mcontract/tx/download/{hash}:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 请求信息
+        in: path
+        name: hash
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 下载合约交易
+      tags:
+      - contract
+  /mcontract/tx/sign:
+    post:
+      consumes:
+      - application/json
+      parameters:
+      - description: 请求信息
+        in: body
+        name: tx
+        required: true
+        schema:
+          $ref: '#/definitions/api.SignRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 签名合约
+      tags:
+      - contract
+  /mcontract/tx/upload:
+    post:
+      consumes:
+      - multipart/form-data
+      parameters:
+      - description: file
+        in: formData
+        name: file
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 上传合约交易
+      tags:
+      - contract
   /transactions/{hash}:
     get:
       consumes:
